:wrench: Add default configuration for posts
These values will be provided to posts if they are not overwritten.

--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,12 @@ exclude:
 
 # An empty array is needed for some functions
 emptyArray: []
+
+defaults:
+    - scope:
+        path: ""
+        type: "posts"
+      values:
+        author:
+            display_name: "Stefan Haun"
+        commenting: 'closed'
