:wrench: Add the archive collection to the Jekyll setup

--- a/_config.yml
+++ b/_config.yml
@@ -34,3 +34,9 @@ defaults:
         author:
             display_name: "Stefan Haun"
         commenting: 'closed'
+
+# Archives
+collections:
+  archives:
+    output: true
+    permalink: /archives/:path/
